# studybible-mcp

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_ANE.md  fly.toml  pyproject.toml  requirements.txt
.claude/commands/: deploy-db.md
.claude/skills/daily-bible-study/: SKILL.md
data/ane_context/: 01_cosmology_worldview.json  02_religious_practices.json  03_social_structure.json  04_legal_covenant.json  05_political_imperial.json  06_economic_life.json  07_literary_conventions.json  08_warfare_military.json  09_daily_life_material_culture.json  10_death_afterlife.json  11_gender_family.json  12_education_literacy.json  13_methodology.json
data/heiser/: source_manifest.json  themes.json  translation_rules.json
data/heiser/content/: deut32_ot_worldview.json  deut32_sons_of_god_paper.json  divine_council_biblical_theology.txt  divine_council_dictionary.json  divine_council_dotwpw.txt  divine_council_israel_godhead.txt  divine_council_lbd.json  elohim_faithlife.json  elohim_in_hebrew_bible.txt  jesus_wisdom_proverbs8.json  jesus_wisdom_proverbs8.txt  monotheism_divine_plurality.txt  monotheism_divine_plurality_bbr.json  monotheism_faithlife.json  monotheism_ot_writers.txt  nb008_1peter3_baptism.txt  nb093_enoch_early_church.txt  nb094_sin_of_watchers.txt  nb094_watchers_galatians.json  nb095_death_of_gods.txt  nb138_what_day_jesus_born.txt  nb176_transcript.txt  nb300_qa36.txt  nb331_qa39.txt  nb334_nephilim.json  nb334_paradise_lost1_nephilim.txt  nb377_revelation9_watchers.txt  nb433_jude2.txt  nb434_jude3_angelic_sin.txt  nb434_jude_angelic_sin.json  (+13 more)
data/torah_weave/: torah-units.json
docs/: SELF_HOST.md  SETUP.md
prompts/: system_prompt.md
scripts/: build_database.py  download_stepbible.py  generate_embeddings.py  import_cross_references.py  import_heiser_content.py  import_theographic.py  import_torah_weave.py  ingest_burnett_gage.py  ingest_lamb_of_free.py  test_server.py  upload-db.sh
src/study_bible_mcp/: __init__.py  database.py  hermeneutics.py  server.py  tools.py
tests/: test_all_tools.py  test_tool_selection.py
(+26 files in other folders)
